...
                app:itemTextAppearanceInactive="@style/BottomNavigationViewTextAppearanceInactive"
                app:itemTextColor="?attr/colorControlNormal"
                app:labelVisibilityMode="unlabeled"
                app:menu="@menu/menu_bottom_navigation" />
        </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:itemTextAppearance="@style/NavigationViewTextAppearance"
        app:itemTextColor="?attr/colorControlNormal"
        app:menu="@menu/menu_navigation" />
...
